# agent-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  application.example.yml  application.yml  chats.db  compose.yml  go.mod  go.sum  package-docker.sh  package-local.sh  pom.xml  start-local.sh  stop-local.sh
.doc/: GUIDE.md
configs/: access-policy.example.yml  access-policy.yml  ai-tools.example.yml  bash.example.yml  channels.example.yml  coder-prompts.example.yml  coder-prompts.yml  coder-settings.example.yml  container-hub.example.yml  file-tools.example.yml  host-tools.example.yml  kbase-prompts.example.yml  kbase-settings.example.yml  memory-prompts.example.yml  prompts.example.yml  prompts.yml  proxy-agent.example.yml  runtime.example.yml  tools.example.yml  vision-recognize.example.yml
docs/: API与协议.md  HITL协议.md  KBASE-LanceDB迁移.md  MCP与前端工具.md  agent-definition-reference.md  compat-cleanup-checklist.md  configuration-reference.md  manual-test-cases.md  memory-configuration.md  memory-evaluation.md  memory-system-analysis.md  memory-system-design.md  project-file-tree.md  sse-event-color-preview.html  versioned-release-bundle.md  会话存储与回放.md  兼容清理清单.md  子智能体调度.md  工具目录权限.md  手工测试用例.md  智能体配置说明.md  版本化打包方案.md  真流式和H2A.md  自动化.md  记忆系统.md  记忆系统dialog设计.md  运行时和沙箱.md  通讯协议.md  配置化说明.md  鉴权与安全边界.md
native/kbase-lance-engine/: Cargo.toml  README.md
native/kbase-lance-engine/.cargo/: config.toml
native/kbase-lance-engine/src/: error.rs  lib.rs  main.rs  model.rs  server.rs  store.rs
scripts/: count_lines.go  (+20 more)
(+1269 files in other folders)
