[package]
name = "kbase-lance-engine"
version = "1.0.0"
edition = "2024"
rust-version = "1.91"
license = "Apache-2.0"
publish = false

[dependencies]
arrow-array = "=58.0.0"
arrow-ipc = "=58.0.0"
arrow-schema = "=58.0.0"
axum = "0.8.8"
bytes = "1.11"
futures = "0.3"
globset = "0.4"
icu_segmenter = "=2.1.2"
lancedb = { version = "=0.30.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1.48", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.24"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
